--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,5 +1,17 @@
+body{
+  background: #FCE8F7;
+}
+.title{
+  font: 70px/60px 'Amatic SC', cursive;
+  color: #F28AD5;
+  text-align: center;
+  margin: 30px auto auto auto;
+}
 .wrap{
-  margin: auto;
-  width: 250px;
-  font-family: 'PT Sans Narrow', sans-serif;
+  margin: 40px auto auto auto;
+  width: 500px;
+  font: 18px/20px 'Amatic SC', cursive;
+  color: #F28AD5;
+  background: #FFFCFE;
+  padding: 50px;
 }
