--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -1,5 +1,7 @@
-.item{
-  color: #DB60B9;
+.root{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 .done{
   color: #F7D5EE;
