--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,14 +1,13 @@
 body{
   background: #FCE8F7;
 }
-.title{
-  font: 70px/60px 'Amatic SC', cursive;
-  color: #F28AD5;
-  text-align: center;
-  margin: 30px auto auto auto;
+.menu{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .wrap{
-  margin: 40px auto auto auto;
+  margin: 10px auto auto auto;
   width: 500px;
   font: 18px/20px 'Amatic SC', cursive;
   color: #F28AD5;
