--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,16 +1,72 @@
 body{
-  background: #FCE8F7;
+  background: #E5E5E5;
+  margin: 0;
+  padding: 0;
+}
+.main-wrap{
+  height: 95vh;
+}
+.made{
+  text-align: right;
+  font: 400 14px/16px Roboto, sans-serif;
+  color: #CCC;
+  width: 700px;
+  margin: 10px auto 3px auto;
 }
 .menu{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin: 0 auto auto auto;
+  width: 400px;
 }
-.wrap{
-  margin: 10px auto auto auto;
-  width: 500px;
-  font: 18px/20px 'Amatic SC', cursive;
-  color: #F28AD5;
-  background: #FFFCFE;
-  padding: 50px;
+.item{
+  font: 700 16px/18px Roboto, sans-serif;
+  text-decoration: none;
+  color: #000;
+  padding: 12px 32px;
+}
+.item:hover{
+  background-color: #80A4FF;
+  border-radius: 37px;
+  padding: 12px 32px;
+}
+.item__active{
+  background-color: #356EFF;
+  color: #FFF;
+  border-radius: 37px;
+  padding: 12px 32px;
+}
+@media (min-width: 400px) and (max-width: 730px){
+  .wrap{
+    height: 100%;
+  }
+  .made{
+    width: 100%;
+    margin: 10px 10px 10px auto;
+  }
+}
+@media (max-width: 400px){
+  .wrap{
+    height: 100%;
+  }
+  .made{
+    width: 100%;
+    margin: 10px 10px 10px auto;
+    font-size: 12px;
+  }
+  .menu{
+    width: 300px;
+  }
+  .item{
+    font-size: 12px;
+    line-height: 12px;
+    padding: 12px 24px;
+  }
+  .item:hover{
+    padding: 12px 24px;
+  }
+  .item__active{
+    padding: 12px 24px;
+  }
 }
