--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -1,9 +1,71 @@
-.root{
+.item{
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  width: 100%;
+  font: 400 14px/16px Roboto, sans-serif;
+  border: 1px solid #CCC;
+  border-radius: 41px;
+  padding: 10px 12px;
+  margin-bottom: 8px;
+}
+.item:hover{
+  border-color: #356EFF;
+}
+.checkbox{
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.checkbox + label{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  left: 0;
+}
+.checkbox + label:before {
+  content: '';
+  border: 1px solid #356EFF;
+  border-radius: 50%;
+  height: 14px;
+  width: 14px;
+}
+.checkbox:checked + label:before{
+   background: url('./img/done.svg') no-repeat -1px -1px;
+}
+.text{
+  padding-left: 20px;
+  word-break: break-all;
+  width: auto;
 }
 .done{
-  color: #F7D5EE;
+  color: #CCC;
   text-decoration: line-through;
+}
+.btn{
+  width: 16px;
+  height: 16px;
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+@media (max-width: 380px){
+  .item{
+    font-size: 12px;
+    line-height: 10px;
+    padding: 8px 10px;
+  }
+  .text{
+    padding-left: 8px;
+  }
+  .checkbox + label:before{
+    height: 10px;
+    width: 10px;
+  }
+  .checkbox:checked + label:before{
+    background-size: 12px;
+  }
+  .btn{
+    height: 12px;
+    width: 12px;
+  }
 }
