--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -1,3 +1,43 @@
+.items{
+  height: auto;
+  margin-bottom: 40px;
+  overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background: #FFF;
+}
+::-webkit-scrollbar-thumb {
+  background: #CCC;
+  border-radius: 6px;
+}
 .item{
   margin: 0px;
+  width: 100%;
+}
+.empty-list{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  font: 400 18px/21px Roboto, sans-serif;
+  margin-top: 5em;
+}
+.empty-list__img{
+  height: 200px;
+}
+.empty-list__header{
+}
+.empty-list__header-sub{
+  font-size: 14px;
+  line-height: 16px;
+  color: #999;
+}
+
+@media (max-width: 420px){
+  .items{
+    height: 340px;
+  }
 }
