--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -1,6 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+.wrap{
+  margin: 10px auto auto auto;
+  width: 636px;
+  height: 75vh;
+  max-height: 580px;
+  font: 400 14px/16px Roboto, sans-serif;
+  color: #000;
+  background: #FFF;
+  padding: 32px;
+  border-radius: 9px;
+}
 .title{
-  font: 30px/20px 'Amatic SC', cursive;
-  color: #F28AD5;
-  text-align: center;
-  margin: 0px auto 30px auto;
+  font: 700 28px/28px Roboto, sans-serif;
+  color: #000;
+  text-align: left;
+}
+.wrap__items{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 60vh;
+  max-height: 500px;
+}
+@media (min-width: 500px) and (max-width: 730px){
+  .wrap{
+    width: 85%;
+    height: 100%;
+    max-height: auto;
+  }
+}
+@media (min-width: 420px) and (max-width: 500px){
+  .wrap{
+    width: 85%;
+    max-height: auto;
+  }
+  .title{
+    font-size: 24px;
+    line-height: 18px;
+  }
+}
+@media (min-width: 380px) and (max-width: 420px){
+  .wrap{
+    width: 80%;
+    max-height: auto;
+  }
+  .title{
+    font-size: 18px;
+    line-height: 10px;
+  }
+}
+@media (max-width: 380px){
+  .wrap{
+    width: 90%;
+    max-height: auto;
+    padding: 32px 10px;
+  }
+  .title{
+    font-size: 16px;
+    line-height: 10px;
+  }
 }
