--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -46,11 +46,11 @@ img{
 @media (min-width: 400px) and (max-width: 600px){
   .wrap{
     width: 85%;
-    padding: 32px auto;
+    padding: 32px 24px;
   }
   .contacts{
     flex-direction: column;
-    width: 350px;
+    width: 300px;
   }
   .contacts__one, .contacts__two{
     flex-direction: row;
@@ -65,6 +65,7 @@ img{
 @media (max-width: 400px){
   .wrap{
     width: 85%;
+    padding: 32px 24px;
   }
   .contacts{
     flex-direction: column;
