--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -25,11 +25,13 @@ body{
   text-decoration: none;
   color: #000;
   padding: 12px 32px;
+  cursor: pointer;
 }
 .item:hover{
   background-color: #80A4FF;
   border-radius: 37px;
   padding: 12px 32px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
 }
 .item__active{
   background-color: #356EFF;
