--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -5,6 +5,7 @@
   background: #FFFCFE;
   padding: 32px;
   border-radius: 9px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
 }
 .contacts{
   display: flex;
@@ -34,9 +35,16 @@
 .link:hover{
   text-decoration: underline;
 }
-img{
+.contacts__img{
   height: 100px;
   margin: auto;
+}
+.contacts__img:hover{
+  height: 93px;
+  width: 94px;
+  border-radius: 32px;
+  border: 1px solid #E5E5E5;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
 }
 @media (min-width: 600px) and (max-width: 730px){
   .wrap{
