--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -20,6 +20,14 @@ button{
   color: #000;
   padding: 2px 8px;
   background-color: transparent;
+  cursor: pointer;
+}
+.btn-fltr:hover{
+  background-color: #356EFF;
+  border-radius: 23px;
+  padding: 2px 8px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 .btn-fltr_active {
   background-color: #356EFF;
