--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -10,6 +10,8 @@
 }
 .item:hover{
   border-color: #356EFF;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 .checkbox{
   position: absolute;
@@ -21,6 +23,11 @@
   flex-direction: row;
   justify-content: flex-start;
   left: 0;
+}
+.checkbox:hover + label:before{
+   background: url('./img/done.svg') no-repeat -1px -1px;
+   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
+   cursor: pointer;
 }
 .checkbox + label:before {
   content: '';
@@ -46,6 +53,18 @@
   height: 16px;
   margin-left: auto;
   margin-right: 10px;
+  border: none;
+  outline: none;
+  background: url('./img/btn_dlt.svg') no-repeat;
+  background-size: 16px 16px;
+}
+.btn:hover{
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #356EFF;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
 @media (max-width: 380px){
