--- a/src/components/MyRepo/MyRepo.module.css
+++ b/src/components/MyRepo/MyRepo.module.css
@@ -26,18 +26,26 @@ ul{
   font: 400 12px/18px 'Roboto', sans-serif;
   color: #999;
 }
+.item:hover{
+  border: 1px solid #356EFF;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
 .name{
   font: 500 14px/14px 'Roboto', sans-serif;
   color: #000;
   word-break: break-all;
 }
 .link{
+  text-decoration: none;
   color: #999;
   font: 400 12px/14px 'Roboto', sans-serif;
   word-break:keep-all;
 }
 .link:hover{
   text-decoration: underline;
+  color: #356EFF;
+  cursor: pointer;
 }
 .desc{
   word-break: break-all;
@@ -94,9 +102,15 @@ ul{
   background-color: transparent;
   color: #356EFF;
 }
+.btn-repo:hover{
+  border-color: #356EFF;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
 .btn-repo:disabled{
   color: #CCC;
   border-color: #CCC;
+  box-shadow: 0px 0px 0px;
 }
 @media (max-width: 500px){
   .repos{
