--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -10,6 +10,7 @@
   background: #FFF;
   padding: 32px;
   border-radius: 9px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
 }
 .title{
   font: 700 28px/28px Roboto, sans-serif;
